fix issues SonarCloud